refactor(collections): reduce DAO and runtime field boilerplate